--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "db:seed": "tsx scripts/seed.ts"
+    "db:seed": "tsx scripts/seed.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "postinstall": "prisma generate",
+    "prepare:deploy": "node scripts/prepare-deploy.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
