--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
-    "prepare:deploy": "node scripts/prepare-deploy.js"
+    "prepare:deploy": "node scripts/prepare-deploy.js",
+    "test:build": "npm ci --legacy-peer-deps && npx prisma generate && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -45,7 +46,6 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/bcryptjs": "^2.4.6",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,18 +67,17 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.1",
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
 }
