--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
     "prepare:deploy": "node scripts/prepare-deploy.js",
-    "test:build": "npm ci --legacy-peer-deps && npx prisma generate && npm run build"
+    "test:build": "npm ci --legacy-peer-deps && npx prisma generate && npm run build",
+    "build:render": "next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -68,15 +69,15 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
-    "zod": "3.25.67"
+    "zod": "3.25.67",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5",
-    "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
     "typescript": "^5"
   }
