--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
     "zod": "3.25.67",
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5"
-  },
-  "devDependencies": {
+    "postcss": "^8.5",
+    "typescript": "^5",
     "@types/node": "^22",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tsx": "^4.20.3",
-    "typescript": "^5"
+    "@types/react-dom": "^19"
+  },
+  "devDependencies": {
+    "tsx": "^4.20.3"
   }
 }
