--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "db:seed": "tsx scripts/seed.ts",
+    "db:seed:prod": "npx tsx scripts/seed.ts",
+    "db:seed:production": "tsx scripts/seed-production.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
