--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:seed": "tsx scripts/seed.ts",
     "db:seed:prod": "npx tsx scripts/seed.ts",
     "db:seed:production": "tsx scripts/seed-production.ts",
+    "migrate:s3": "tsx scripts/migrate-images-to-s3.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
@@ -19,6 +20,8 @@
     "build:render": "next build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -49,6 +52,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -58,8 +65,10 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5",
     "prisma": "^6.13.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
@@ -69,18 +78,15 @@
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
-    "zod": "3.25.67",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "vaul": "^1.1.1",
+    "zod": "3.25.67"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "tsx": "^4.20.3"
   }
 }
