--- a/nginx.conf
+++ b/nginx.conf
@@ -10,18 +10,18 @@ http {
     # HTTP - редирект на HTTPS
     server {
         listen 80;
-        server_name _;
-        return 301 https://$host$request_uri;
+        server_name carspark.be www.carspark.be;
+        return 301 https://$server_name$request_uri;
     }
 
     # HTTPS
     server {
         listen 443 ssl http2;
-        server_name _;
+        server_name carspark.be www.carspark.be;
 
-        # SSL конфигурация (замените на свои сертификаты)
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        # SSL сертификаты (если есть)
+        ssl_certificate /etc/letsencrypt/live/carspark.be/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/carspark.be/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
@@ -51,9 +51,9 @@ http {
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
 
-        # Проксирование к приложению
+        # Проксирование к локальному приложению
         location / {
-            proxy_pass http://app;
+            proxy_pass http://localhost:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -66,14 +66,14 @@ http {
 
         # Статические файлы
         location /_next/static/ {
-            proxy_pass http://app;
+            proxy_pass http://localhost:3000;
             proxy_cache_valid 200 1y;
             add_header Cache-Control "public, immutable";
         }
 
         # API роуты
         location /api/ {
-            proxy_pass http://app;
+            proxy_pass http://localhost:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
