--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,86 @@
-version: '3.8'
-
 services:
-  app:
-    build: .
-    ports:
-      - "80:80"
-    environment:
-      - DEBUG=False
-      - DJANGO_SETTINGS_MODULE=carspark_backend.settings
-      - DATABASE_URL=postgresql://postgres:password@db:5432/carspark
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
-      - SECRET_KEY=${SECRET_KEY}
-    depends_on:
-      - db
-    volumes:
-      - ./backend/media:/app/backend/media
-      - ./backend/static:/app/backend/static
-    restart: unless-stopped
-
+  # PostgreSQL Database
   db:
     image: postgres:15
     environment:
-      - POSTGRES_DB=carspark
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
+      POSTGRES_DB: carspark_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5434:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - carspark-network
+
+  # Django Backend
+  backend:
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - DEBUG=True
+      - SECRET_KEY=django-insecure-carspark-secret-key-2025
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/carspark_db
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend,0.0.0.0
+      - CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+      - USE_S3=True
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=eu-north-1
+      - AWS_S3_BUCKET_NAME=aslan-auto-img
+    volumes:
+      - ./backend/media:/app/media
+    depends_on:
+      db:
+        condition: service_healthy
+    command: >
+      sh -c "python init_db.py && 
+             python manage.py runserver 0.0.0.0:8000"
+    networks:
+      - carspark-network
     restart: unless-stopped
+
+  # Next.js Frontend
+  frontend:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+      - NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+      - USE_S3=True
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=eu-north-1
+      - AWS_S3_BUCKET_NAME=aslan-auto-img
+    volumes:
+      - ./frontend/public:/app/public:ro
+    depends_on:
+      - backend
+    networks:
+      - carspark-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 volumes:
   postgres_data:
+
+networks:
+  carspark-network:
+    driver: bridge
