Fix: добавлены build args для Next.js переменных в Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,6 +13,12 @@ RUN npm ci
 # Копируем исходный код
 COPY . .
 
+# Устанавливаем переменные окружения для сборки
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_BACKEND_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_BACKEND_URL=$NEXT_PUBLIC_BACKEND_URL
+
 # Собираем приложение
 RUN npm run build
 
