--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -67,6 +67,9 @@ services:
     build: 
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+        NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
     ports:
       - "127.0.0.1:3000:3000"
     environment:
