--- a/nginx/conf.d/carspark.conf
+++ b/nginx/conf.d/carspark.conf
@@ -12,7 +12,7 @@ upstream frontend {
 # HTTP to HTTPS redirect
 server {
     listen 80;
-    server_name _;
+    server_name azautos.be www.azautos.be;
     
     # Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
@@ -20,15 +20,15 @@ server {
     }
     
     location / {
-    # Redirect all other traffic to HTTPS
-        return 301 https://$host$request_uri;
+        # Redirect all other traffic to HTTPS
+        return 301 https://azautos.be$request_uri;
     }
 }
 
 # Main HTTPS server
 server {
     listen 443 ssl http2;
-    server_name _;
+    server_name azautos.be www.azautos.be;
 
     # SSL configuration
     ssl_certificate /etc/nginx/ssl/cert.pem;
